tests/ucc/type/good/array.c
int main(void)
{
    int *a;
    int b[4];

    a[4] = b[3];

    return 0;
}
