tests/ucc/type/bad/subscript-val-not-array.c
int main(void)
{
    int i;

    i = i[3];

    return 0;
}
